--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -9,7 +9,7 @@
 
 .gh-head-menu,
 .gh-head-actions {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 700;
 }
 
@@ -18,4 +18,15 @@
         justify-content: center;
         margin: 0;
     }
+}
+
+.gh-head-inner {
+    background-color: rgb(7, 27, 35, 0.6);
+    padding-left: var(--gap);
+    padding-right: var(--gap);
+}
+
+.gh-outer {
+    padding-left: 0;
+    padding-right: 0;
 }
